pyquest/tests/semantic_analysis/valid/test009.ql
// Different questions with equal labels
form testForm {
	"First Question"
	someIdentifier : integer
	"First Question"
	anotherIdentifier : decimal
}