pyquest/tests/semantic_analysis/invalid/test011.ql
// Incompatible types for subtraction operation
form testForm {
	"First Question"
	someIdentifier : decimal = 10.0 - True
}